--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,9 @@ body{
     margin: 0 auto;
 }
 
+input, button{
+    font-family: 'Montserrat', sans-serif;
+}
 
 /* CABRÇALHO */
 .cabecalho{
@@ -67,7 +70,9 @@ body{
 }
 
 /* PRINCIPAL */
-main{}
+main{
+    margin-bottom: 230px;
+}
 
 /* SEÇÃO INFORMAÇÕES RESTAURANTE */
 .secaoInfoRestaurante{
@@ -140,6 +145,7 @@ main{}
     border: 1px solid #e0e0e0;
     border-radius: 5px;
     padding-bottom: 15px;
+    box-shadow: 2px 5px 3px 0px #d2d2d2;
 }
 .secaoPratosDestaque__itemPrato > a{
     color: #3E3E3E;
@@ -164,4 +170,127 @@ main{}
 .secaoPratosDestaque__precoPrato{
     display: inline-block;
     padding-left: 15px;
+}
+
+
+/* CONTEÚDO PRINCIPAL */
+.conteudoPrincipal{
+    margin-top: 60px;
+}
+.conteudoPrincipal > .container{
+    display: flex;
+    justify-content: space-between;
+}
+
+/* SEÇÃO SOBREMESAS */
+.secaoSobremesas{
+    width: 65.4%;
+}
+.secaoSobremesas__titulo{
+    color: #3E3E3E;
+    font-size: 28px;
+    font-weight: 600;
+}
+
+.secaoSobremesas__listaSobremesas{
+    margin-top: 30px;
+}
+.secaoSobremesas__itemSobremesa{
+    margin-bottom: 32px;
+    box-shadow: 2px 5px 3px 0px #d2d2d2;
+    border-radius: 5px;
+}
+.secaoSobremesas__itemSobremesa > a{
+    text-decoration: none;
+    color: #3E3E3E;
+    font-weight: 600;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    border: 1px solid #e0e0e0;
+}
+
+.secaoSobremesas__descricaoSobremesa{
+    padding: 20px;
+}
+.secaoSobremesas__descricaoSobremesa > h3{}
+.secaoSobremesas__descricaoSobremesa > p{
+    color: #787878;
+    font-weight: 500;
+    padding-top: 26px;
+    padding-bottom: 78px;
+}
+.secaoSobremesas__descricaoSobremesa > span{}
+
+.secaoSobremesas__imagemSobremesa{}
+.secaoSobremesas__imagemSobremesa > img{
+    width: 250px;
+}
+.secaoSobremesas__imagemSobremesa > figcaption{
+    display: none;
+}
+
+/* SEÇÃO CARRINHO */
+.secaoCarrinho{
+    width: 31%;
+}
+.secaoCarrinho__titulo{
+    font-size: 28px;
+    font-weight: 600;
+    color: #EA1D2C;
+}
+.secaoCarrinho__conteudo{
+    border: 1px solid #e0e0e0;
+    border-radius: 5px;
+    padding: 60px 40px;
+    margin-top: 40px;
+}
+
+.secaoCarrinho__listaItens{}
+.secaoCarrinho__item{
+    font-weight: 600;
+    color: #3e3e3e;
+    border-bottom: 2px solid #3E3E3E;
+    padding-bottom: 25px;
+    margin-bottom: 25px;
+}
+
+.secaoCarrinho__itemDescricao{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+.secaoCarrinho__itemDescricao > h3{}
+.secaoCarrinho__itemDescricao > span{}
+.secaoCarrinho__botaoRemover{
+    color: #A6A6A6;
+    font-weight: 600;
+    background-color: transparent;
+    border: none;
+    font-size: 15px;
+    padding: 0;
+}
+
+.secaoCarrinho__total{
+    font-weight: 600;
+    color: #3e3e3e;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 80px;
+}
+.secaoCarrinho__total > p{}
+.secaoCarrinho__total > span{}
+
+.secaoCarrinho__formaPagamento{
+    text-align: center;
+}
+.secaoCarrinho__formaPagamento > button{
+    background-color: #EA1D2C;
+    border: none;
+    color: white;
+    font-weight: 500;
+    font-size: 18px;
+    padding: 18px 0;
+    border-radius: 5px;
+    width: 100%;
 }
