--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,21 +153,22 @@ main{
     font-weight: 600;
 }
 
-.secaoPratosDestaque__imagemPrato{}
-.secaoPratosDestaque__imagemPrato > img{
+.secaoPratosDestaque__itemPrato > a > figure{}
+.secaoPratosDestaque__itemPrato > a > figure > img{
     width: 100%;
 }
-.secaoPratosDestaque__imagemPrato > figcaption{
+.secaoPratosDestaque__itemPrato > a > figure > figcaption{
     display: none;
 }
 
-.secaoPratosDestaque__nomePrato{
+.secaoPratosDestaque__itemPrato > a > div{}
+.secaoPratosDestaque__itemPrato > a > div > h3{
     padding-bottom: 90px;
     padding-top: 15px;
     padding-left: 15px;
     padding-right: 15px;
 }
-.secaoPratosDestaque__precoPrato{
+.secaoPratosDestaque__itemPrato > a > div > span{
     display: inline-block;
     padding-left: 15px;
 }
@@ -208,25 +209,26 @@ main{
     justify-content: space-between;
     padding: 20px;
     border: 1px solid #e0e0e0;
+    flex-direction: row-reverse;
 }
 
-.secaoSobremesas__descricaoSobremesa{
+.secaoSobremesas__itemSobremesa > a > div{
     padding: 20px;
 }
-.secaoSobremesas__descricaoSobremesa > h3{}
-.secaoSobremesas__descricaoSobremesa > p{
+.secaoSobremesas__itemSobremesa > a > div > h3{}
+.secaoSobremesas__itemSobremesa > a > div > p{
     color: #787878;
     font-weight: 500;
     padding-top: 26px;
     padding-bottom: 78px;
 }
-.secaoSobremesas__descricaoSobremesa > span{}
+.secaoSobremesas__itemSobremesa > a > div > span{}
 
-.secaoSobremesas__imagemSobremesa{}
-.secaoSobremesas__imagemSobremesa > img{
+.secaoSobremesas__itemSobremesa > a > figure{}
+.secaoSobremesas__itemSobremesa > a > figure > img{
     width: 250px;
 }
-.secaoSobremesas__imagemSobremesa > figcaption{
+.secaoSobremesas__itemSobremesa > a > figure > figcaption{
     display: none;
 }
 
@@ -255,14 +257,14 @@ main{
     margin-bottom: 25px;
 }
 
-.secaoCarrinho__itemDescricao{
+.secaoCarrinho__item > div{
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
 }
-.secaoCarrinho__itemDescricao > h3{}
-.secaoCarrinho__itemDescricao > span{}
-.secaoCarrinho__botaoRemover{
+.secaoCarrinho__item > div > h3{}
+.secaoCarrinho__item > div > span{}
+.secaoCarrinho__item > button{
     color: #A6A6A6;
     font-weight: 600;
     background-color: transparent;
